--- a/package.json
+++ b/package.json
@@ -38,13 +38,14 @@
   "dependencies": {
     "angularfire": "^1.2.0",
     "atob": "^2.0.3",
-    "babel-core": "^6.9.1",
+    "babel-core": "^6.23.1",
     "babel-plugin-transform-strict-mode": "^6.6.5",
     "babel-preset-es2015": "^6.9.0",
     "body-parser": "^1.16.0",
     "bower": "^1.7.9",
     "btoa": "^1.1.2",
     "busboy": "^0.2.12",
+    "clean-css": "^4.0.7",
     "cloudinary": "^1.6.0",
     "co": "^4.6.0",
     "co-request": "^1.0.0",
@@ -67,6 +68,7 @@
     "gridfs-stream": "^1.1.1",
     "gulp-watch": "^4.3.5",
     "handlebars": "^4.0.5",
+    "html-minifier": "^3.3.1",
     "html-to-pdf": "^0.1.11",
     "http": "0.0.0",
     "jasmine-node": "^1.14.5",
@@ -92,6 +94,8 @@
     "public-ip": "^2.0.1",
     "query-selector": "^1.0.9",
     "rand-token": "^0.3.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "read-dir-files": "^0.1.1",
     "recursive-copy": "^2.0.5",
     "relative-path": "^1.1.0",
