--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "exe": "^1.0.2",
     "express": "^4.13.4",
     "express-busboy": "^5.0.0",
+    "file-size": "^1.0.0",
     "firebase": "latest",
     "firebase-admin": "^4.0.5",
     "fs-watcher": "^0.2.1",
