--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "minify-content": "^1.0.0",
     "minimatch": "^3.0.0",
     "mkdirp": "^0.5.1",
+    "mmmagic": "^0.4.5",
     "moment": "^2.11.2",
     "moment-timezone": "^0.5.4",
     "mongoose": "~4.8.1",
