--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "install-safe": "npm i --save $1 --no-bin-links",
     "gitlog": "git log --graph --pretty=oneline --abbrev-commit",
     "clear": "node ./lib/tasks/task.clear.js",
-    "local": "nodemon ./lib/server.js --watch ./lib --watch ./src --watch .env --watch ./configs",
+    "local": "nodemon ./lib/server.js --watch ./lib --watch ./src/server --watch .env --watch ./configs",
     "version": "./scripts/generate-version.sh",
     "deploy": "./scripts/ftp_deploy.sh",
     "server": "node ./lib/server.js",
@@ -30,7 +30,7 @@
     "ssg"
   ],
   "engines": {
-    "npm": "7.8.0"
+    "node": "7.8.0"
   },
   "author": "Javier Arancibia",
   "license": "ISC",
@@ -43,8 +43,11 @@
     "atob": "^2.0.3",
     "babel-core": "^6.24.1",
     "babel-plugin-transform-strict-mode": "^6.6.5",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-rollup": "^3.0.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-runtime": "^6.23.0",
     "body-parser": "^1.16.0",
     "bower": "^1.7.9",
     "btoa": "^1.1.2",
@@ -112,6 +115,9 @@
     "require.async": "^0.1.1",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^1.0.2",
     "sander": "^0.5.1",
     "shortid": "^2.2.6",
     "simple-node-logger": "^0.93.14",
@@ -120,6 +126,7 @@
     "string": "^3.3.3",
     "timeout-as-promise": "^1.0.0",
     "to-snake-case": "^1.0.0",
+    "uglify-js-harmony": "^2.7.7",
     "urldecode": "^1.0.1",
     "urlencode": "^1.1.0",
     "urlencode2": "^1.0.1",
@@ -129,8 +136,10 @@
     "yargs": "^4.7.1"
   },
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
     "gulp": "^3.9.1",
     "rollup-stream": "^1.19.0",
+    "uglify-js-harmony": "^2.7.7",
     "vinyl-source-stream": "^1.1.0"
   }
 }
