--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   },
   "homepage": "",
   "dependencies": {
+    "angular": "^1.6.4",
+    "angular-route": "^1.6.4",
     "angularfire": "^1.2.0",
     "atob": "^2.0.3",
     "babel-core": "^6.24.1",
@@ -115,6 +117,7 @@
     "require.async": "^0.1.1",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-uglify": "^1.0.2",
