--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "install-safe": "npm i --save $1 --no-bin-links",
     "gitlog": "git log --graph --pretty=oneline --abbrev-commit",
     "clear": "node ./lib/tasks/task.clear.js",
-    "local": "nodemon ./lib/server.js --watch ./lib --watch ./src/server --watch .env --watch ./configs",
+    "local": "nodemon -e js,jade,html,css,scss,json ./lib/server.js --watch ./lib --watch ./src/server --watch .env --watch ./src/client/context.js",
     "version": "./scripts/generate-version.sh",
     "deploy": "./scripts/ftp_deploy.sh",
     "server": "node ./lib/server.js",
@@ -44,6 +44,7 @@
     "angularfire": "^1.2.0",
     "atob": "^2.0.3",
     "babel-core": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-strict-mode": "^6.6.5",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -69,6 +70,7 @@
     "exe": "^1.0.2",
     "express": "^4.13.4",
     "express-busboy": "^5.0.0",
+    "express-request-response-logger": "^1.0.0",
     "file-size": "^1.0.0",
     "firebase": "latest",
     "firebase-admin": "^4.0.5",
@@ -76,6 +78,7 @@
     "ftp-deploy": "^1.1.0",
     "getmac": "^1.2.1",
     "gridfs-stream": "^1.1.1",
+    "gulp": "^3.9.1",
     "gulp-better-rollup": "^1.1.1",
     "gulp-file": "^0.3.0",
     "gulp-watch": "^4.3.5",
@@ -124,6 +127,7 @@
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-uglify": "^1.0.2",
+    "rollup-stream": "^1.19.0",
     "sander": "^0.5.1",
     "shortid": "^2.2.6",
     "simple-node-logger": "^0.93.14",
@@ -136,18 +140,11 @@
     "urldecode": "^1.0.1",
     "urlencode": "^1.1.0",
     "urlencode2": "^1.0.1",
+    "vinyl-source-stream": "^1.1.0",
     "watch": "^0.17.1",
     "webpack": "^2.3.3",
     "webpack-stream": "^3.2.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "yargs": "^4.7.1",
-    "gulp": "^3.9.1",
-    "rollup-stream": "^1.19.0",
-    "uglify-js-harmony": "^2.7.7",
-    "vinyl-source-stream": "^1.1.0"
-  },
-  "devDependencies": {
-
+    "yargs": "^4.7.1"
   },
   "devDependencies": {}
 }
