--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "mailchimp-api-v3": "^1.7.0",
     "mailcomposer": "^3.6.2",
     "mailgun-js": "^0.7.7",
+    "marked": "^0.3.6",
     "md5": "^2.2.1",
     "mime-types": "^2.1.11",
     "minify-content": "^1.0.0",
