LIB#bags-experiment

--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
     "gulp": "^3.9.1",
     "gulp-better-rollup": "^1.1.1",
     "gulp-file": "^0.3.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-watch": "^4.3.5",
     "handlebars": "^4.0.5",
     "html-minifier": "^3.3.1",
@@ -118,6 +120,7 @@
     "react-dom": "^15.4.2",
     "read-dir-files": "^0.1.1",
     "recursive-copy": "^2.0.5",
+    "redom": "^2.7.1",
     "relative-path": "^1.1.0",
     "remove-html-comments": "^1.0.2",
     "request": "^2.69.0",
