LIB#cipher/auth/session

--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   "dependencies": {
     "angular": "^1.6.4",
     "angular-route": "^1.6.4",
+    "angular-sanitize": "^1.6.4",
+    "angular-spinner": "^1.0.1",
     "angularfire": "^1.2.0",
     "atob": "^2.0.3",
     "babel-core": "^6.24.1",
@@ -62,6 +64,7 @@
     "concurrently": "^2.0.0",
     "connect-busboy": "0.0.2",
     "create-if-not-exist": "0.0.2",
+    "crypto-js": "^3.1.9-1",
     "cssbeautify": "^0.3.1",
     "del": "^2.2.0",
     "directory-tree": "^1.0.0",
@@ -81,6 +84,7 @@
     "gulp": "^3.9.1",
     "gulp-better-rollup": "^1.1.1",
     "gulp-file": "^0.3.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-watch": "^4.3.5",
@@ -116,11 +120,8 @@
     "public-ip": "^2.0.1",
     "query-selector": "^1.0.9",
     "rand-token": "^0.3.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
     "read-dir-files": "^0.1.1",
     "recursive-copy": "^2.0.5",
-    "redom": "^2.7.1",
     "relative-path": "^1.1.0",
     "remove-html-comments": "^1.0.2",
     "request": "^2.69.0",
@@ -138,6 +139,7 @@
     "simple-node-logger": "^0.93.14",
     "simple-ssh": "^0.9.0",
     "socket.io": "^1.4.6",
+    "store2": "^2.5.1",
     "string": "^3.3.3",
     "timeout-as-promise": "^1.0.0",
     "to-snake-case": "^1.0.0",
