--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "engines": {
     "node": "7.8.0"
   },
-  "author": "Javier Arancibia",
+  "author": "Javier Arancibia (arancibiajav@gmail.com)",
   "license": "ISC",
   "bugs": {
     "url": ""
