--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "string": "^3.3.3",
     "timeout-as-promise": "^1.0.0",
     "to-snake-case": "^1.0.0",
+    "uglify-js": "^3.0.15",
     "uglify-js-harmony": "^2.7.7",
     "urldecode": "^1.0.1",
     "urlencode": "^1.1.0",
